# frontiersimulator

./: .gitignore  Cargo.toml  README.md  frontier.toml.example
.github/workflows/: build.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/frontier/: Cargo.toml
crates/frontier/src/: budget.rs  envelope.rs  lib.rs  runner.rs  tracker.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs  premiumize.rs  realdebrid.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: events.rs  jsonl.rs  lib.rs  sqlite.rs
crates/transport/: Cargo.toml
crates/transport/src/: curl_ffi.rs  download.rs  lib.rs  probe.rs  reactor.rs
docs/: TRANSPORT_TUNING_LLD.md
