[workspace]
members = [
    "crates/cli",
    "crates/provider",
    "crates/transport",
    "crates/frontier",
    "crates/telemetry",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
