[package]
name = "frontier-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "frontier-sim"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
frontier-provider = { path = "../provider" }
frontier-transport = { path = "../transport" }
frontier-core = { path = "../frontier" }
frontier-telemetry = { path = "../telemetry" }
crossbeam-channel = "0.5"
