[package]
name = "frontier-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
frontier-telemetry = { path = "../telemetry" }
curl = { version = "0.4", features = ["poll_7_68_0", "static-ssl"] }
curl-sys = "0.4"
openssl-sys = { version = "0.9", features = ["vendored"] }
crossbeam-channel = "0.5"
sha2 = "0.10"
